# impactlens

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AI_authorized_emails.txt  Dockerfile  README.md  catalog-info.yaml  docker-compose.yml  pyproject.toml  requirements.txt  test_jira_api.py  tox.ini
.githooks/: README.md  commit-msg-ai-trailer.sh
.github/actions/ai-analysis/: action.yml
.github/actions/report-comment/: README.md  action.yml
.github/scripts/: check-code-changed.sh  detect-internal-gitlab.sh  get-upload-args.sh  setup-google-credentials.sh  setup-google-sheets.sh  test-prompt-generation.sh  validate_config.py
.github/workflows/: CI_INTEGRATION_TEST_REPORTS.md  README.md  ci.yml  config-validation.yml  gemini-analysis.yml  generate-reports.yml
ai_impact_analysis/: cli.py
ai_impact_analysis/core/: jira_report_generator.py  pr_metrics_calculator.py  pr_report_generator.py
ai_impact_analysis/models/: config.py
ai_impact_analysis/scripts/: analyze_with_claude_code.py  generate_jira_comparison_report.py  generate_jira_report.py  generate_pr_comparison_report.py  generate_pr_report.py  get_jira_metrics.py  get_pr_metrics.py  upload_to_sheets.py  verify_setup.py
ai_impact_analysis/utils/: core_utils.py  report_preprocessor.py  report_utils.py  workflow_utils.py
config/: aggregation_config.yaml.example  analysis_prompt_template.yaml  combined_analysis_prompt_template.yaml  jira_report_config.yaml  jira_report_config.yaml.example  pr_report_config.yaml  pr_report_config.yaml.example
config/CUE/: aggregation_config.yaml
config/CUE/konfluxui/: jira_report_config.yaml  pr_report_config.yaml
config/CUE/rhtapui/: jira_report_config.yaml  pr_report_config.yaml
config/CUE/securesign/: jira_report_config.yaml  pr_report_config.yaml
config/konfluxui/: jira_report_config.yaml  pr_report_config.yaml
config/release-service/: aggregation_config.yaml
config/release-service/internal-services/: pr_report_config.yaml
config/release-service/release-service/: jira_report_config.yaml  pr_report_config.yaml
config/release-service/release-service-catalog/: pr_report_config.yaml
config/release-service/release-service-utils/: pr_report_config.yaml
config/test/: jira_report_config.yaml  pr_report_config.yaml
config/test-aggregation-ci/: aggregation_config.yaml
config/test-aggregation-ci/test-ci-team1/: jira_report_config.yaml  pr_report_config.yaml
config/test-aggregation-ci/test-ci-team2/: jira_report_config.yaml  pr_report_config.yaml
config/test-one-single-period/: jira_report_config.yaml
config/test-one-single-period-jira/: jira_report_config.yaml
config/test-one-single-period-pr/: pr_report_config.yaml
config/test-simple-team/: jira_report_config.yaml  pr_report_config.yaml
docs/: CONFIGURATION.md  CONTRIBUTING.md  LOCAL_DEVELOPMENT.md  METRICS_GUIDE.md
impactlens/: __init__.py  cli.py
impactlens/clients/: __init__.py  github_client.py  github_client_graphql.py  jira_client.py  sheets_client.py
impactlens/core/: __init__.py  jira_metrics_calculator.py  jira_report_generator.py  pr_metrics_calculator.py  pr_report_generator.py  report_aggregator.py  report_orchestrator.py
impactlens/models/: __init__.py
impactlens/scripts/: aggregate_reports.py  analyze_with_claude_code.py  analyze_with_gemini.py  clear_google_sheets.py  generate_analysis_prompt.py  generate_charts.py  generate_jira_comparison_report.py  generate_jira_report.py  generate_pr_comparison_report.py  generate_pr_report.py  generate_statistical_analysis.py  get_jira_metrics.py  get_pr_metrics.py  send_email_notifications.py  upload_to_sheets.py  verify_setup.py
impactlens/utils/: __init__.py  anonymization.py  cli_utils.py  common_args.py  core_utils.py  email_notifier.py  github_charts_uploader.py  logger.py  pr_utils.py  report_preprocessor.py  report_utils.py  sheets_visualization.py  smtp_config.py  visualization.py  workflow_utils.py
tests/: test_github_client.py  test_github_integration.py  test_jira_client.py  test_jira_integration.py  test_utils.py
tests/manual/: README.md  test_github_gitlab_client.py  test_jira_api.py
(+2 files in other folders)
