[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "impactlens"
version = "0.1.0"
description = "ImpactLens - Measure the impact of AI tools on development efficiency as well as team and individual performance "
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary - Red Hat Internal"}
authors = [
    {name = "Red Hat Konflux UI Team"}
]
keywords = ["jira", "analysis", "ai", "metrics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "certifi>=2025.10.5",
    "charset-normalizer>=3.4.4",
    "idna>=3.11",
    "requests>=2.32.5",
    "urllib3>=2.5.0",
    "pyyaml>=6.0",
    "anthropic>=0.40.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    # Google Sheets support (default behavior uploads to Sheets)
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "google-api-python-client>=2.100.0",
    # Visualization support for charts generation
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.scripts]
impactlens = "impactlens.cli:app"

[tool.setuptools]
packages = ["impactlens"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
